refactor: simplify clang dumper resource setup